--- a/flaskinventory/templates/users/register.html
+++ b/flaskinventory/templates/users/register.html
@@ -4,23 +4,14 @@
     <form method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Join Today</legend>
-            <div class="form-group">
-                {{ form.username.label(class="form-control-label") }} {% if form.username.errors %} {{ form.username(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.username.errors %}
-                    <span>{{ error }}</span> {% endfor %}
-                </div>
-                {% else %} {{ form.username(class="form-control form-control-lg") }} {% endif %}
-
-            </div>
-            <div class="form-group">
-                {{ form.email.label(class="form-control-label") }} {% if form.email.errors %} {{ form.email(class="form-control form-control-lg is-invalid") }}
+            <legend class="border-bottom mb-4">Request an Account</legend>
+            <div class="form-floating mb-3">
+                {% if form.email.errors %} {{ form.email(class="form-control form-control-lg is-invalid") }}
                 <div class="invalid-feedback">
                     {% for error in form.email.errors %}
                     <span>{{ error }}</span> {% endfor %}
                 </div>
-                {% else %} {{ form.email(class="form-control form-control-lg") }} {% endif %}
+                {% else %} {{ form.email(class="form-control form-control-lg", placeholder="email@example.com") }} {% endif %} {{ form.email.label() }}
 
             </div>
             <div class="form-group">
@@ -42,8 +33,8 @@
 
             </div>
         </fieldset>
-        <div class="form-group">
-            {{ form.submit(class="btn btn-outline-info my-4") }}
+        <div class="form-group mb-3">
+            {{ form.submit(class="btn btn-primary my-4") }}
         </div>
     </form>
     <div class="border-top pt-3">
