--- a/flaskinventory/templates/users/profile.html
+++ b/flaskinventory/templates/users/profile.html
@@ -52,7 +52,7 @@
         </a>
         <a href="{{ url_for('main.under_development') }}" type="button" class="list-group-item list-group-item-action {% if current_user.user_level < 2 %}disabled{% endif %}"><i class="fas fa-glasses me-3 fa-fw"></i>Review Entries</a>
         <a href="{{ url_for('main.under_development') }}" type="button" class="list-group-item list-group-item-action {% if current_user.user_level < 2 %}disabled{% endif %}"><i class="fas fa-envelope-open-text me-3 fa-fw"></i>Invite New User</a>
-        <a href="{{ url_for('main.under_development') }}" type="button" class="list-group-item list-group-item-action {% if current_user.user_level < 10 %}disabled{% endif %}"><i class="fas fa-users-cog me-3 fa-fw"></i>Change User Permissions</a>
+        <a href="{{ url_for('users.admin_view') }}" type="button" class="list-group-item list-group-item-action {% if current_user.user_level < 10 %}disabled{% endif %}"><i class="fas fa-users-cog me-3 fa-fw"></i>Change User Permissions</a>
     </div>
 </div>
 {% endblock sidebar %}
