--- a/flaskinventory/templates/users/profile.html
+++ b/flaskinventory/templates/users/profile.html
@@ -40,19 +40,4 @@
     </div>
 </div>
 
-{% endblock content %} {% block sidebar %}
-
-<div class="" style="width: 380px;">
-    <a href="#" class="d-flex align-items-center flex-shrink-0 pb-3 link-dark text-decoration-none">
-        <span class="fs-5 fw-semibold">Tasks</span>
-    </a>
-    <div class="list-group">
-        <a href="{{ url_for('main.under_development') }}" type="button" class="list-group-item list-group-item-action">
-            <i class="fas fa-plus-circle me-3 fa-fw"></i>Add new entry
-        </a>
-        <a href="{{ url_for('main.under_development') }}" type="button" class="list-group-item list-group-item-action {% if current_user.user_level < 2 %}disabled{% endif %}"><i class="fas fa-glasses me-3 fa-fw"></i>Review Entries</a>
-        <a href="{{ url_for('main.under_development') }}" type="button" class="list-group-item list-group-item-action {% if current_user.user_level < 2 %}disabled{% endif %}"><i class="fas fa-envelope-open-text me-3 fa-fw"></i>Invite New User</a>
-        <a href="{{ url_for('users.admin_view') }}" type="button" class="list-group-item list-group-item-action {% if current_user.user_level < 10 %}disabled{% endif %}"><i class="fas fa-users-cog me-3 fa-fw"></i>Change User Permissions</a>
-    </div>
-</div>
-{% endblock sidebar %}
+{% endblock content %} {% block sidebar %} {% include "users/profile_sidebar.html" %} {% endblock sidebar %}
