--- a/flaskinventory/templates/users/register.html
+++ b/flaskinventory/templates/users/register.html
@@ -1,42 +1,8 @@
 {% extends "layout.html" %} {% block content %}
 
 <div class="content-section">
-    <form method="POST" action="">
-        {{ form.hidden_tag() }}
-        <fieldset class="form-group">
-            <legend class="border-bottom mb-4">Request an Account</legend>
-            <div class="form-floating mb-3">
-                {% if form.email.errors %} {{ form.email(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.email.errors %}
-                    <span>{{ error }}</span> {% endfor %}
-                </div>
-                {% else %} {{ form.email(class="form-control form-control-lg", placeholder="email@example.com") }} {% endif %} {{ form.email.label() }}
-
-            </div>
-            <div class="form-group">
-                {{ form.password.label(class="form-control-label") }} {% if form.password.errors %} {{ form.password(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.password.errors %}
-                    <span>{{ error }}</span> {% endfor %}
-                </div>
-                {% else %} {{ form.password(class="form-control form-control-lg") }} {% endif %}
-
-            </div>
-            <div class="form-group">
-                {{ form.confirm_password.label(class="form-control-label") }} {% if form.confirm_password.errors %} {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                    {% for error in form.confirm_password.errors %}
-                    <span>{{ error }}</span> {% endfor %}
-                </div>
-                {% else %} {{ form.confirm_password(class="form-control form-control-lg") }} {% endif %}
-
-            </div>
-        </fieldset>
-        <div class="form-group mb-3">
-            {{ form.submit(class="btn btn-primary my-4") }}
-        </div>
-    </form>
+    <h1>Registrations are not possible</h1>
+    <h4>Please wait for an invitation</h4>
     <div class="border-top pt-3">
         <small class="text-muted">
         Already Have an Account? <a class="ml-2" href="{{ url_for('users.login') }}">Sign In</a>
