renamed user level to user Role

--- a/flaskinventory/templates/users/profile.html
+++ b/flaskinventory/templates/users/profile.html
@@ -9,7 +9,7 @@
             <dt class="col-sm-3 mb-4">Date joined</dt>
             <dd class="col-sm-9">{{ current_user.date_joined.strftime('%Y-%m-%d') }}</dd>
             <dt class="col-sm-3 mb-4">User Level</dt>
-            <dd class="col-sm-9">{{ current_user.user_level }}</dd>
+            <dd class="col-sm-9">{{ current_user.user_role }}</dd>
             <dt class="col-sm-3 mb-4">Display Name</dt>
             <dd class="col-sm-9">{{ current_user.user_displayname }}</dd>
             <dt class="col-sm-3 mb-4">Affiliation</dt>
